Update async func to promise

--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,8 @@
     <!-- Compiled and minified JavaScript -->
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"></script>
     
-    <link rel="stylesheet" href="/assets/robot.css">
-    <script defer src="/assets/index.js"></script>
+    <!-- <link rel="stylesheet" href="/assets/robot.css"> -->
+    <script defer src="./index.js"></script>
     <script>
             $(document).ready(function(){
                 $('select').formSelect();
@@ -28,7 +28,7 @@
 
 
                 <div class="row">
-                    <form class="col s6" name="robotForm" action="/robots">
+                    <form class="col s6" name="robotForm" action="/robot">
 
                         <div class="row">
                                 <div class="input-field col s12">
